status error handling and bug fixes

--- a/frontend/components/common/navbar.html
+++ b/frontend/components/common/navbar.html
@@ -16,14 +16,12 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li>
-              <a class="dropdown-item" href="../pages/quickCollect.html"
+              <a class="dropdown-item" href="./quickcollect.html"
                 >Quick Collect</a
               >
             </li>
             <li>
-              <a
-                class="dropdown-item"
-                href="../pages/patternRecognition/patternRecognition.html"
+              <a class="dropdown-item" href="./patternRecognition.html"
                 >Pattern Recognition</a
               >
             </li>
