--- a/frontend/components/patternRecognition/collectionSettings.html
+++ b/frontend/components/patternRecognition/collectionSettings.html
@@ -34,6 +34,7 @@
         class="form-control form-control-sm"
         id="action-duration"
         aria-describedby="actionStatus"
+        min="1"
       />
     </div>
   </div>
@@ -46,6 +47,7 @@
         id="action-delay"
         value="collectionConfig.delay"
         aria-describedby="actionStatus"
+        min="1"
       />
     </div>
   </div>
@@ -57,6 +59,7 @@
         class="form-control form-control-sm"
         id="action-trials"
         aria-describedby="actionStatus"
+        min="1"
       />
     </div>
   </div>
