--- a/frontend/components/patternRecognition/promptView.html
+++ b/frontend/components/patternRecognition/promptView.html
@@ -1,5 +1,5 @@
 <div class="promptViewContainer">
   <button style="width: 50%; margin-bottom: 5px" onclick="onOpenPrompt()">
     Open</button
-  ><button style="width: 50%">Preview</button>
+  ><button style="width: 50%" onclick="preview()">Preview</button>
 </div>
