--- a/frontend/components/common/channelSelector.html
+++ b/frontend/components/common/channelSelector.html
@@ -5,7 +5,7 @@
   function onChannelToggle(channel) {
     switch (channel) {
       case "all":
-        if ($(`#qc-channel-all`).attr("active") === "true") {
+        if ($(`#qc-all-channels`).attr("active") === "true") {
           $("button[id^='qc-channel-']").removeClass("btn btn-primary");
           $("button[id^='qc-channel-']").addClass("btn btn-secondary");
           $("button[id^='qc-channel-']").attr("active", "false");
@@ -106,7 +106,7 @@
 <button
   type="button"
   class="btn btn-secondary"
-  id="qc-channel-all"
+  id="qc-all-channels"
   onclick="onChannelToggle('all')"
   active="false"
 >
