--- a/frontend/components/quickCollect/livePlot.html
+++ b/frontend/components/quickCollect/livePlot.html
@@ -70,7 +70,10 @@
   });
 
   function onStart() {
-    console.log("START");
+    let channels = 0;
+    $('[id^="qc-channel-"]').each(function (i, el) {
+      if ($(this).attr("active") == "true") channels++;
+    });
     // This function is an accurate interval function
     function AdjustingInterval(workFunc, interval, errorFunc) {
       var that = this;
@@ -101,6 +104,7 @@
     var ticker = null;
     $("#stopBtn").click(function () {
       if (ticker != null) {
+        console.log(data);
         ticker.stop();
       }
     });
@@ -110,9 +114,8 @@
     const featureFrame = ($("#time-step").val() * 1000) / INTERVAL_TIME;
 
     function doWork() {
-      console.log(Date.now());
       const reader = $("#input-select").val();
-      fetch(`http://127.0.0.1:5000/read/${reader}`)
+      fetch(`http://127.0.0.1:5000/read/${reader}/${channels}`)
         .then((response) => response.json())
         .then((result) => {
           if (data.length > 1000) {
@@ -120,19 +123,17 @@
             labels.splice(0, FRAME_SIZE);
           }
           //Feature
-          console.log(data.length);
           if (frame % featureFrame == 0) {
             onNewFeatureData(featuredata);
             featuredata = [];
           }
 
-          result.map((dataPoint) => {
+          result[0].map((dataPoint) => {
             labels.push(i);
             data.push({ x: i, y: dataPoint });
             featuredata.push(dataPoint);
             i++;
           });
-          console.log(labels, data);
           //data.push({ x: i, y: result });
           //labels.push(i);
           myLineChart.data.datasets[0].data = data;
