Input selectino and reader abstraction

--- a/frontend/components/patternRecognition/collectionSettings.html
+++ b/frontend/components/patternRecognition/collectionSettings.html
@@ -45,7 +45,7 @@
         type="number"
         class="form-control form-control-sm"
         id="action-delay"
-        value="collectionConfig.delay"
+        value="5"
         aria-describedby="actionStatus"
         min="1"
       />
