--- a/frontend/components/common/inputTypeSelector.html
+++ b/frontend/components/common/inputTypeSelector.html
@@ -1,16 +1,14 @@
 <script type='text/javascript'>
 $(function () {
-
       /*
             Populate Dropdowns/Fetch Data
-          */
+      */
 
       setTimeout(() => {
         //CSV Files
         fetch("http://127.0.0.1:5000/datafiles")
           .then((response) => response.json())
           .then((data_files) => {
-            console.log(data_files);
             for (i = 0; i < data_files.length; i++) {
               const split = data_files[i].split("/");
               file_name = split[split.length - 1];
@@ -27,9 +25,8 @@ $(function () {
           fetch("http://127.0.0.1:5000/getreaders")
           .then((response) => response.json())
           .then((readers) => {
-            console.log(readers);
             for (i = 0; i < readers.length; i++) {
-              $("#input-select").append(
+              $("#daq-select").append(
                 $("<option>", {
                   value: readers[i].key,
                   text: readers[i].name,
@@ -41,23 +38,29 @@ $(function () {
       }, 1000);
     });
 
-    $('#input-select').on('change', function() {
-      console.log(this.value)
-      if(this.value=='filereader'){ 
-        $("#file-select").attr("disabled", false);
-        $("#file-select").attr('style', 'display:inline')
-      }
-      else{ $("#file-select").attr('style', 'display:none')}
-    });
-function onFileSelect() {
-    //set radio to file and enable the file selector
-    $("#file-select").attr("disabled", false);
-    $("#input-type-live").attr("checked", false);
+
+    function onFileChange() {
+    // Set file to inital selection state
+    const file = $('#file-select :selected').text().split(".")[0];
+    console.log("FILE oc", file)
+    fetch(`http://127.0.0.1:5000/setfileinput/${file}`)
   }
 
-  function onLiveSelect() {
-    //set radio to live and disable the file selector
-    $("#file-select").attr("disabled", true);
+function onFileSelect() {
+    //set radio to file and enable the file selector
+    $("#file-select").attr('style', 'display:inline')
+    $("#daq-select").attr('style', 'display:none')
+    $("#input-type-daq").attr("checked", false);
+    // Set file to inital selection state
+    const file = $('#file-select :selected').text().split(".")[0];
+    console.log("FILE fs", file)
+    fetch(`http://127.0.0.1:5000/setfileinput/${file}`)
+  }
+
+  function onDAQSelect() {
+    //set radio to daq and show daq selection
+    $("#daq-select").attr('style', 'display:inline')
+    $("#file-select").attr('style', 'display:none')
     $("#input-type-file").attr("checked", false);
   }
   function onRandomSelect() {
@@ -68,19 +71,44 @@ function onFileSelect() {
   }
 </script>
 
+<div class="form-check">
+  <input
+    class="form-check-input"
+    type="radio"
+    name="flexRadioDefault"
+    id="input-type-daq"
+    checked
+    onclick="onDAQSelect()"
+  />
+  <label class="form-check-label" for="flexRadioDefault2">
+    DAQ
+  </label>
+</div>
+<div class="form-check">
+  <input
+    class="form-check-input"
+    type="radio"
+    name="flexRadioDefault"
+    id="input-type-file"
+    onclick="onFileSelect()"
+  />
+  <label class="form-check-label" for="flexRadioDefault1">
+    File
+  </label>
+</div>
   <select
-    id="input-select"
+    id="daq-select"
     class="form-select"
     aria-label="Default select example"
+    style='display:inline'
   >
-    <option selected>Input</option>
   </select>
   <select
     id="file-select"
     class="form-select"
     aria-label="Default select example"
     style='display:none'
-    disabled
+    onchange="onFileChange()"
   >
   </select>
 </div>
